k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: comin-admin-dashboard-webapp-service
  namespace: comin-dev
spec:
  selector:
    app: comin-admin-dashboard-webapp-service
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
